make it risponsive

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       </div>
       <div class="rightnavbarsection">
         <img src="images/icon-cart.svg" alt="cart" class="cartimage">
+        <div class="itemcount">
+          <p class="itemscount">0</p>
+        </div>
         <img src="images/image-avatar.png" alt="profile" class="profileimage">
       </div>
       <div class="hoverdiv">
@@ -46,6 +49,19 @@
         </div>
       </div>
     </div>
+    <!-- header for mobile phone -->
+    <div class="mobilenavlelement">
+      <div class="forflex">
+        <div class="leftmobilenavelement">
+          <img src="images/icon-menu.svg" alt="menu" class="menu">
+          <img src="images/logo.svg" alt="logo" class="mobilelogo">
+        </div>
+        <div class="rightmobilenavelement">
+          <img src="images/icon-cart.svg" alt="cart" class="mobilecartimage">
+          <img src="images/image-avatar.png" alt="" class="mobileprofile">
+        </div>
+      </div>
+     </div>
   </header>
   <div class="maincontent">
     <div class="leftmaincontent">
@@ -57,11 +73,6 @@
         <div class="bg-images" id="bg-image1" data-image="/images/image-product-2-thumbnail.jpg"></div>
         <div class="bg-images" id="bg-image2" data-image="/images/image-product-3-thumbnail.jpg"></div>
         <div class="bg-images" id="bg-image3" data-image="/images/image-product-4-thumbnail.jpg"></div>
-
-        <!-- <img src="/images/image-product-1-thumbnail.jpg" alt="tumblain" class="smallimg">
-        <img src="/images/image-product-2-thumbnail.jpg" alt="tumblain" class="smallimg">
-        <img src="/images/image-product-3-thumbnail.jpg" alt="tumblain" class="smallimg">
-        <img src="/images/image-product-4-thumbnail.jpg" alt="tumblain" class="smallimg"> -->
       </div>
     </div>
     <div class="rightmaincontent">
