working for mobile

--- a/index.html
+++ b/index.html
@@ -49,15 +49,53 @@
         </div>
       </div>
     </div>
+    </div>
     <!-- header for mobile phone -->
     <div class="mobilenavlelement">
       <div class="forflex">
         <div class="leftmobilenavelement">
           <img src="images/icon-menu.svg" alt="menu" class="menu">
+          <div class="menusection">
+            <img src="images/icon-close.svg" alt="close" class="cross">
+            <div class="mobileelement1">
+              <a href="#" class="mobileelement">Collections</a>
+              <a href="#" class="mobileelement">Women</a>
+              <a href="#" class="mobileelement">Men</a>
+              <a href="#" class="mobileelement">About</a>
+              <a href="#" class="mobileelement">Contact</a>
+            </div>
+          </div>
           <img src="images/logo.svg" alt="logo" class="mobilelogo">
         </div>
         <div class="rightmobilenavelement">
           <img src="images/icon-cart.svg" alt="cart" class="mobilecartimage">
+
+
+          <div class="cartdiv">
+            <p class="mobilecartname">CART</p>
+            <hr class="mobilehr">
+            <div class="emptycart">
+              <p class="empty">Your cart is empty.</p>
+            </div>
+            <div class="allfullcart">
+              <div class="mobileitemselect">
+                <img src="images/image-product-1-thumbnail.jpg" alt="tumbllain" class="mobilethunblain">
+                <div class="mobilepricesection">
+                  <p class="itemnameinmobile">Fall Limited Edition Sneakers</p>
+                  <p class="mobileammount">$125.00 x <span class="mobilecount">0</span> = <span class="mobiletotalammount">$125.00</span></p>
+                </div>
+              </div>
+              <div class="mobileconfrm">
+                <button type="button" class="proceed">proceed</button>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
           <img src="images/image-avatar.png" alt="" class="mobileprofile">
         </div>
       </div>
