add more functionality

--- a/index.html
+++ b/index.html
@@ -104,7 +104,18 @@
   <div class="maincontent">
     <div class="leftmaincontent">
       <div class="bigimage">
+
+        <div class="pre">
+
+          <img src="images/icon-previous.svg" alt="pre" class="forprevious">
+        </div>
         <img src="images/image-product-1.jpg" alt="mainimage" class="mainimage">
+        <div class="next">
+          <img src="images/icon-next.svg" alt="next" class="nextimg">
+        </div>
+
+
+
       </div>
       <div class="smallimagesection">
         <div class="bg-images" id="bg-image" data-image="/images/image-product-1-thumbnail.jpg"></div>
